Part 2 of assignment 1 - Tobias Dublin

--- a/02/index.html
+++ b/02/index.html
@@ -8,10 +8,39 @@
     <body>
         <main>
             <header>
-                <h1></h1>
+                <h1>Prime Ministers of Canada</h1>
             </header>
             <article>
                 <table>
+                    <thead>
+                        <tr>
+                            <th>Prime Minister</th>
+                            <th>Party</th>
+                            <th>From</th>
+                            <th>To</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>John A. Macdonald</td>
+                            <td>Conservative</td>
+                            <td>1867</td>
+                            <td>1873</td>
+                        </tr>
+                        <tr>
+                            <td>Alexander Mackenzie</td>
+                            <td>Liberal	</td>
+                            <td>1873</td>
+                            <td>1878</td>
+                        </tr>
+                        <tr>
+                            <td>John Abbott</td>
+                            <td>Conservative</td>
+                            <td>1891</td>
+                            <td>1892</td>
+                        </tr>
+                    </tbody>
+                    <caption>This list of prime ministers is incomplete.</caption>
                 </table> 
             </article>
             <footer>
