Part 5 of assignment 1 - Tobias Dublin

--- a/05/index.html
+++ b/05/index.html
@@ -2,31 +2,46 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="author" content="your name">
+    <meta name="author" content="Tobias Dublin">
     <meta name="description" content="description of your page">
     <link href="style.css" rel="stylesheet"/>
-    <title>My Page Title</title>
+    <title>The Spread of Industrialization and the Parallels of Today</title>
   </head>
   <body>
-      <!--     Content goes here!         -->
-      <header><h1>"this is h1"</h1>
-          <h2><span class="author">Tobias Dublin</span></h2></header>
-      <section class="main"><img alt="" src="https://sdkljfdsl.com/img.jpeg"/>
+      <article><!--     Content goes here!         -->
+      <header><h1><strong>The Spread of Industrialization ca.1825</strong><br><em>Its Parallels Today</em></h1>
+          <h2><span class="author">Tobias Dublin</span><br> HIS393</h2></header>
+      <section class="main"><img alt="The timeline of revolutions." src="https://www.researchgate.net/profile/Adelaja_Oluwaseun2/publication/331044858/figure/fig1/AS:731290261274626@1551364593744/The-Four-Levels-of-the-Industrial-Revolution-11.png">
 
-          Aliquam erat volutpat.  Nunc eleifend leo vitae magna.  In id erat non orci commodo lobortis.  Proin neque massa, cursus ut, gravida ut, lobortis eget, lacus.  Sed diam.  Praesent fermentum tempor tellus.  Nullam tempus.  Mauris ac felis vel velit tristique imperdiet.  Donec at pede.  Etiam vel neque nec dui dignissim bibendum.  Vivamus id enim.  Phasellus neque orci, porta a, aliquet quis, semper a, massa.  Phasellus purus.  Pellentesque tristique imperdiet tortor.  Nam euismod tellus id erat.
-Pellentesque dapibus suscipit ligula.  Donec posuere augue in quam.  Etiam vel tortor sodales tellus ultricies commodo.  Suspendisse potenti.  Aenean in sem ac leo mollis blandit.  Donec neque quam, dignissim in, mollis nec, sagittis eu, wisi.  Phasellus lacus.  Etiam laoreet quam sed arcu.  Phasellus at dui in ligula mollis ultricies.  Integer placerat tristique nisl.  Praesent augue.  Fusce commodo.  Vestibulum convallis, lorem a tempus semper, dui dui euismod elit, vitae placerat urna tortor vitae lacus.  Nullam libero mauris, consequat quis, varius et, dictum id, arcu.  Mauris mollis tincidunt felis.  Aliquam feugiat tellus ut neque.  Nulla facilisis, risus a rhoncus fermentum, tellus tellus lacinia purus, et dictum nunc justo sit amet elit.
-
-
-
-          Lorem ipsum dolor sit amet, consectetuer adipiscing elit.  Donec hendrerit tempor tellus.  Donec pretium posuere tellus.  Proin quam nisl, tincidunt et, mattis eget, convallis nec, purus.  Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.  Nulla posuere.  Donec vitae dolor.  Nullam tristique diam non turpis.  Cras placerat accumsan nulla.  Nullam rutrum.  Nam vestibulum accumsan nisl.
+        <p>There have been many technological revolutions which have come before and after the industrialization 
+        of Europe. Most wouldn’t contest that we currently are going through an immense technological revolution,
+        centered around the increased capacity to communicate and educate, as well as the general improvements to quality
+        of life through applications and devices which were mere fantasy before the internet, let alone the computer. 
+        Yet these great changes to our society are nothing new, and for that very reason, looking back at the revolutions 
+        of the past, specifically the one which ushered in the modern era, may act as a useful guide to ensure those changes 
+        are for the good of society.</p>
+        <p>One thing to consider is how the industrial revolution spread in the past. 
+        For many decades, the British who had virtually monopolized the production of processed and factory produced 
+        goods, had made every attempt to keep industrial technology within the confines of their island. 
+        They were reluctant to even industrialize their colonies for fear of them gaining enough power to become independent. 
+        But as we know today, these attempts all failed in the end. There seems to be an inverse of this situation occurring 
+        in our modern day, with what was formerly an open internet connecting people from across the world, 
+        nations are attempting to further regulate whatever parts of the internet they can. 
+        In China internet usage is quite limited, and in the EU,  there is a concerted effort to regulate 
+        what content can be distributed freely.</p>
+        <p><strong> Is there a similar futility to this effort as there was for 
+        the British in the early 19th century? Or perhaps there is a need to tame the wild west of the web.</strong></p>
 
 
 
       </section>
+      </article>
       <section class="sources">
+          SOURCES
           <ul>
-              <li><a href="">soure text</a></li>
-              <li><a href="">soure text</a></li>
+              <li><a href="https://books-scholarsportal-info.myaccess.library.utoronto.ca/en/read?id=/ebooks/ebooks4/taylorandfrancis4/2018-06-08/3/9781317895138">Historical Patterns of Industrialization</a></li>
+              <li><a href="https://en.wikipedia.org/wiki/Internet_censorship_in_China">Internet Censorship in China</a></li>
+              <li><a href="https://www.theverge.com/2019/3/26/18280726/europe-copyright-directive">EU Overhaul of Online Copyright</a></li>
           </ul>
       </section>
   </body>
