--- a/05/index.html
+++ b/05/index.html
@@ -37,7 +37,7 @@
       </section>
       </article>
       <section class="sources">
-          SOURCES
+          <strong>SOURCES</strong>
           <ul>
               <li><a href="https://books-scholarsportal-info.myaccess.library.utoronto.ca/en/read?id=/ebooks/ebooks4/taylorandfrancis4/2018-06-08/3/9781317895138">Historical Patterns of Industrialization</a></li>
               <li><a href="https://en.wikipedia.org/wiki/Internet_censorship_in_China">Internet Censorship in China</a></li>
