--- a/05/index.html
+++ b/05/index.html
@@ -38,7 +38,7 @@
       </article>
       <section class="sources">
           <strong>SOURCES</strong>
-          <ul>
+          <ul style="list-style: none;">
               <li><a href="https://books-scholarsportal-info.myaccess.library.utoronto.ca/en/read?id=/ebooks/ebooks4/taylorandfrancis4/2018-06-08/3/9781317895138"><strong>Patterns of Industrialization</strong></a></li>
               <li><a href="https://en.wikipedia.org/wiki/Internet_censorship_in_China"><strong> Censorship in China</strong></a></li>
               <li><a href="https://www.theverge.com/2019/3/26/18280726/europe-copyright-directive"><strong> Overhaul of Online Copyright</strong></a></li>
